--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Quokkaa</title>
+	<title>Quokka1</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
