--- a/app/team.html
+++ b/app/team.html
@@ -89,7 +89,7 @@
 													<div class="ch-item ch-img-3">
 														<div class="ch-info">
 															<h3>Павел Алекин</h3>
-															<p>Back-end разработчик <a href="#">Перейти в профиль</a></p>
+															<p>Back-end разработчик <a href="howdy/Pavel.html">Перейти в профиль</a></p>
 														</div>
 													</div>
 												</div>
