--- a/app/havesite.html
+++ b/app/havesite.html
@@ -74,7 +74,7 @@
 											<div class="welcome">
 												<p><span>Решения которые предлагает команда</span></p>
 												<h1 class="h1">Quokka</h1>
-												<strong><i class="fa fa-star"></i>Мы готовы извлечь 100% из ваших процессов<i class="fa fa-star"></i></strong>
+												<strong><i class="fa fa-star"></i>Мы готовы автоматизировать большое колличество ваших бизнес процессов<i class="fa fa-star"></i></strong>
 											</div>
 											<div class="log">
 												Не знаете что вам необходимо? Обратитесь к нам и наши специалисты подскажут вам, как лучше все организовать. Не стесняйтесь это бесплатно!
@@ -230,7 +230,7 @@
 							<input type="hidden" name="form_subject" value="Заявка с сайта Quokka">
 							<!-- END Hidden Required Fields -->
 
-							<div class="callback-logo"><img src="img/logo.svg" alt="Quokka - студия веб разработки"></div>
+							<div class="callback-logo"><img src="img/logo_white.png" alt="Quokka - студия веб разработки"></div>
 							<div class="formhead h2">Оставить заявку</div>
 							<p>Оставьте заявку и мы перезвоним вам в течении 15 минут.</p>
 
@@ -282,11 +282,11 @@
 						<nav class="footer-menu">
 							
 							<ul>
-								<li class="active"><a href="#">Главная</a></li>
-								<li><a href="#">Решение для сайтов</a></li>
-								<li><a href="#">Сайты</a></li>
-								<li><a href="#">Команда</a></li>
-								<li><a href="#">Партфолио</a></li>
+								<li class="active"><a href="index.html">Главная</a></li>
+								<li><a href="yessite.html">Решение для сайтов</a></li>
+								<li><a href="havesite.html">Сайты</a></li>
+								<li><a href="team.html">Команда</a></li>
+								<li><a href="allproject.html">Партфолио</a></li>
 								<li><a href="#">Quokka.news</a></li>
 							</ul>
 
