--- a/app/allproject.html
+++ b/app/allproject.html
@@ -78,13 +78,13 @@
 
 									<div class="header-composition">
 
-										<div class="welcome2">
-											<p><span>Работы которые выполнила команда</span></p>
-											<h1 class="h1">Quokka</h1>
+										<div class="welcome">
+											<p style="color: #666"><span>Работы которые выполнила команда</span></p>
+											<h1 class="h1" style="color: #666">Quokka</h1>
 											<strong><i class="fa fa-star"></i><i class="fa fa-star"></i></strong>
 										</div>
 										<div class="log">
-											<div class="owl-carousel partners">
+											<div class="owl-carousel partnerss">
 
 												<div class="partner">
 													<img src="img/partners/cheesserp.png" alt="Федерация шахмат Серпухова">
