--- a/app/corp.html
+++ b/app/corp.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Сайты | Quokka</title>
+	<title>Корпоративные сайты | Quokka</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -126,7 +126,9 @@
 	      				<div class="cek1">
 
 	      					<h1>Удобная навигация</h1>
-	      					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse ducimus dolores facilis nihil necessitatibus quod! Repellendus est itaque dolorem sunt praesentium, tenetur mollitia fugit culpa, maxime provident nemo, saepe modi!</p>
+	      					<p>Для того, чтобы пользователю было удобно просматривать необходимую информацию
+									или же быстро найти нужный раздел, мы тщательно продумываем структуру сайта, а также
+								грамотное расположение элементов. Пользователь никогда не заблудится у вас на сайте.</p>
 
 
 	      				</div>
@@ -150,15 +152,20 @@
 	      				<div class="cek4">
 
 	      					<h1>Индивидуальный дизайн</h1>
-	      					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo natus qui enim! Incidunt omnis numquam, consectetur nemo atque ad. Quia suscipit delectus quas ullam exercitationem at alias eius! Accusantium, minus!</p>
+	      					<p>С учетом развития технологий, также меняются и тенденции в дизайне,
+										следовательно и привычки пользователей. Чтобы быть всегда в тренде мы используем последние технологии
+									в области дизайна. Мы также тщательно подходим к этому этапу разработки, и вы можете быть на 100% уверены,
+								что ваш сайт будет отличаться от всех ваших конкурентов.</p>
 
 	      				</div>
 	      			</div>
 	      		<div class="col-sm-8">
 	      				<div class="cek5">
 
-	      					<h1>Бесплатный анализ</h1>
-	      					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse ducimus dolores facilis nihil necessitatibus quod! Repellendus est itaque dolorem sunt praesentium, tenetur mollitia fugit culpa, maxime provident nemo, saepe modi!</p>
+	      					<h1>Интеграции</h1>
+	      					<p>Для автоматизации бизнес процессов в вашей компании, мы подбираем вам приложения и интегрируем
+									их с вашим сайтом (CRM системы, ERP системы, таск менеджеры, почта и многое другое). Тем самым вы получаете не просто
+								сайт а целую бизнес систему.</p>
 
 
 	      				</div>
@@ -183,12 +190,16 @@
 						<h2 class="h2 text-center h-first">Посмотрите решения</h2>
 					</div>
 
-					<div class="col-sm-8 col-sm-offset-2">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem delectus nulla, voluptates! Voluptatem repellendus eveniet odio illum necessitatibus quae, beatae culpa, quod nam! Doloremque dolor sunt amet, odio minus assumenda.</p>
-
-						<a href="#" class="button sub-cent">Посмотреть решения</a>
-
-					</div>
+					<div class="col-sm-8 col-sm-offset-2 text-center">
+						<p>Вы можете посмотреть примеры наших работ, где возможно увидите,
+							что мы вашу проблему уже решали.</p></div>
+						<div class="col-sm-12">
+							<div class="col-sm-4 col-sm-offset-2">
+							<a href="allproject.html" class="button">Посмотреть решения</a>
+						</div>
+						<div class="col-sm-4">
+							<a href="#" class="button sub-cent">Узнать цены</a></div>
+						</div>
 
 				</div>
 
