--- a/app/landing.html
+++ b/app/landing.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Сайты | Quokka</title>
+	<title>Landing page | Quokka</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -126,7 +126,8 @@
 	      				<div class="txt1">
 
 	      					<h1>Быстрый запуск</h1>
-	      					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse ducimus dolores facilis nihil necessitatibus quod! Repellendus est itaque dolorem sunt praesentium, tenetur mollitia fugit culpa, maxime provident nemo, saepe modi!</p>
+	      					<p>Создание качественного Landing-page занимает гараздо меньше времени, чем развертывание
+									корпоративного сайта, а уж темболее интернет-магазина. </p>
 
 
 	      				</div>
@@ -150,15 +151,18 @@
 	      				<div class="txt4">
 
 	      					<h1>Гарантированное получение клиентов</h1>
-	      					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo natus qui enim! Incidunt omnis numquam, consectetur nemo atque ad. Quia suscipit delectus quas ullam exercitationem at alias eius! Accusantium, minus!</p>
+	      					<p>Современный дизайн и продуманное юзабилити, которое будет удобно для клиентов, плюс
+									последующие тестирование после получения трафика и доработки непосредственно под пользователя,
+								в совокупности дает гарантированный результат.</p>
 
 	      				</div>
 	      			</div>
 	      		<div class="col-sm-8">
 	      				<div class="txt5">
 
-	      					<h1>Бесплатный анализ</h1>
-	      					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse ducimus dolores facilis nihil necessitatibus quod! Repellendus est itaque dolorem sunt praesentium, tenetur mollitia fugit culpa, maxime provident nemo, saepe modi!</p>
+	      					<h1>Выдерженные стандарты</h1>
+	      					<p>В отличии от конструкторов, landing-page разработанный нами просто летает, у него колосальная скорость
+									загрузки, 100% адаптивен под любые устойства, кроссбраузерный, и в целом отвечает всем web стандартам.</p>
 
 
 	      				</div>
@@ -183,8 +187,9 @@
 						<h2 class="h2 text-center h-first">Посмотрите решения</h2>
 					</div>
 
-					<div class="col-sm-8 col-sm-offset-2">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem delectus nulla, voluptates! Voluptatem repellendus eveniet odio illum necessitatibus quae, beatae culpa, quod nam! Doloremque dolor sunt amet, odio minus assumenda.</p></div>
+					<div class="col-sm-8 col-sm-offset-2 text-center">
+						<p>Вы можете посмотреть примеры наших работ, где возможно увидите,
+							что мы вашу проблему уже решали.</p></div>
 						<div class="col-sm-12">
 							<div class="col-sm-4 col-sm-offset-2">
 							<a href="allproject.html" class="button">Посмотреть решения</a>
@@ -215,7 +220,7 @@
 							<input type="hidden" name="form_subject" value="Заявка с сайта Quokka">
 							<!-- END Hidden Required Fields -->
 
-							<div class="callback-logo"><img src="img/logo.svg" alt="Quokka - студия веб разработки"></div>
+							<div class="callback-logo"><img src="img/logo_white.png" alt="Quokka - студия веб разработки"></div>
 							<div class="formhead h2">Оставить заявку</div>
 							<p>Оставьте заявку и мы перезвоним вам в течении 15 минут.</p>
 
