--- a/app/portal.html
+++ b/app/portal.html
@@ -126,7 +126,10 @@
 	      				<div class="por1">
 
 	      					<h1>Работаем по технологии</h1>
-	      					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse ducimus dolores facilis nihil necessitatibus quod! Repellendus est itaque dolorem sunt praesentium, tenetur mollitia fugit culpa, maxime provident nemo, saepe modi!</p>
+	      					<p>Чтобы сложная разработка законилась успехом, необходима правильная технология, и конечно же
+									она у нас есть! Вы можете быть уверены, что ваша разработка не встанет по середине всего процесса!
+								Граммотное распределение задач и работа с помощью метода управления проектами scrum, в совокупности
+							всегда кончается успехом.</p>
 
 
 	      				</div>
@@ -150,7 +153,8 @@
 	      				<div class="por4">
 
 	      					<h1>Используем последние стандарты</h1>
-	      					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo natus qui enim! Incidunt omnis numquam, consectetur nemo atque ad. Quia suscipit delectus quas ullam exercitationem at alias eius! Accusantium, minus!</p>
+	      					<p>Чтобы ваше web-приложение выглядело отлично на мобильных устройствах и различных браузерах, мы
+									всегда соблюдаем стандарты написания. Наш код всегда прокомментирован и структуирован, </p>
 
 	      				</div>
 	      			</div>
@@ -158,7 +162,8 @@
 	      				<div class="por5">
 
 	      					<h1>Полная прозрачность разработки</h1>
-	      					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse ducimus dolores facilis nihil necessitatibus quod! Repellendus est itaque dolorem sunt praesentium, tenetur mollitia fugit culpa, maxime provident nemo, saepe modi!</p>
+	      					<p>Хотите просматривать на каком этапе ваша разработка находится? Нет проблем! Мы придумали систему
+									чтобы вы смогли наблюдать на какой стадии находится ваш проект и какие к нему поставлены задачи.</p>
 
 
 	      				</div>
@@ -183,8 +188,9 @@
 						<h2 class="h2 text-center h-first">Посмотрите решения</h2>
 					</div>
 
-					<div class="col-sm-8 col-sm-offset-2">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem delectus nulla, voluptates! Voluptatem repellendus eveniet odio illum necessitatibus quae, beatae culpa, quod nam! Doloremque dolor sunt amet, odio minus assumenda.</p></div>
+					<div class="col-sm-8 col-sm-offset-2 text-center">
+						<p>Вы можете посмотреть примеры наших работ, где возможно увидите,
+							что мы вашу проблему уже решали.</p></div>
 						<div class="col-sm-12">
 							<div class="col-sm-4 col-sm-offset-2">
 							<a href="allproject.html" class="button">Посмотреть решения</a>
@@ -216,7 +222,7 @@
 							<input type="hidden" name="form_subject" value="Заявка с сайта Quokka">
 							<!-- END Hidden Required Fields -->
 
-							<div class="callback-logo"><img src="img/logo.svg" alt="Quokka - студия веб разработки"></div>
+							<div class="callback-logo"><img src="img/logo_white.png" alt="Quokka - студия веб разработки"></div>
 							<div class="formhead h2">Оставить заявку</div>
 							<p>Оставьте заявку и мы перезвоним вам в течении 15 минут.</p>
 
