--- a/app/sell.html
+++ b/app/sell.html
@@ -126,7 +126,9 @@
 	      				<div class="sl1">
 
 	      					<h1>Практический моментальная загрузка страниц</h1>
-	      					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse ducimus dolores facilis nihil necessitatibus quod! Repellendus est itaque dolorem sunt praesentium, tenetur mollitia fugit culpa, maxime provident nemo, saepe modi!</p>
+	      					<p>Одним из главных факторов продажи товаров и услуг в интернете - это практический моментальная
+									загрузка страниц, ведь пользователи ой как не любят ждать. Но особенно важным этот вопрос становится,
+								когда база товаров просто огромная. Мы разрабатываем интернет-магазины, у которых полная загрузки сайта занимает не более трех секунд.</p>
 
 
 	      				</div>
@@ -150,7 +152,10 @@
 	      				<div class="sl4">
 
 	      					<h1>Автоматизация процессов</h1>
-	      					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo natus qui enim! Incidunt omnis numquam, consectetur nemo atque ad. Quia suscipit delectus quas ullam exercitationem at alias eius! Accusantium, minus!</p>
+	      					<p>Очень важной задачей в разработке E-commerce является автоматизация бизнес процессов.
+									Необходимо максимально продумать и интегрировать ваш интернет-магазин с различными базами данных,
+								CRM, ERP и другими системами, это позволить максимально ускорить рабочие процессы и даст
+							дополнительные удобства пользователям.</p>
 
 	      				</div>
 	      			</div>
@@ -158,7 +163,9 @@
 	      				<div class="sl5">
 
 	      					<h1>Бесплатный месячный аудит</h1>
-	      					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse ducimus dolores facilis nihil necessitatibus quod! Repellendus est itaque dolorem sunt praesentium, tenetur mollitia fugit culpa, maxime provident nemo, saepe modi!</p>
+	      					<p>Заказывая у нас данную разработку вы в подарок получаете месячный аудит, где
+									наши специалисты расскажут как пользоваться системой и от каких рутинных операций вы избавились.
+								</p>
 
 
 	      				</div>
@@ -183,8 +190,9 @@
 						<h2 class="h2 text-center h-first">Посмотрите решения</h2>
 					</div>
 
-					<div class="col-sm-8 col-sm-offset-2">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem delectus nulla, voluptates! Voluptatem repellendus eveniet odio illum necessitatibus quae, beatae culpa, quod nam! Doloremque dolor sunt amet, odio minus assumenda.</p></div>
+					<div class="col-sm-8 col-sm-offset-2 text-center">
+						<p>Вы можете посмотреть примеры наших работ, где возможно увидите,
+							что мы вашу проблему уже решали.</p></div>
 						<div class="col-sm-12">
 							<div class="col-sm-4 col-sm-offset-2">
 							<a href="allproject.html" class="button">Посмотреть решения</a>
@@ -216,7 +224,7 @@
 							<input type="hidden" name="form_subject" value="Заявка с сайта Quokka">
 							<!-- END Hidden Required Fields -->
 
-							<div class="callback-logo"><img src="img/logo.svg" alt="Quokka - студия веб разработки"></div>
+							<div class="callback-logo"><img src="img/logo_white.png" alt="Quokka - студия веб разработки"></div>
 							<div class="formhead h2">Оставить заявку</div>
 							<p>Оставьте заявку и мы перезвоним вам в течении 15 минут.</p>
 
