--- a/app/team.html
+++ b/app/team.html
@@ -38,7 +38,7 @@
       <div id="my-header">
 
       	<header class="site-header" style="background-image: url(img/team.jpg);">
-
+					<div id="particles-js"></div>
 					<div class="top-line">
 						<a href="index.html" class="logo"><img src="img/logo.svg" alt="Студия веб разработки Quokka"></a>
 						<div class="phone hidden-xs"><i class="fa fa-mobile"> +7 (495) 003-47-89</i></div>
