--- a/app/havesite.html
+++ b/app/havesite.html
@@ -51,7 +51,7 @@
 
 							<ul>
 								<li class="active"><a href="index.html">Главная</a></li>
-								<li><a href="marketing.html">Решение для сайтов</a></li>
+								<li><a href="yessite.html">Решение для сайтов</a></li>
 								<li><a href="havesite.html">Сайты</a></li>
 								<li><a href="team.html">Команда</a></li>
 								<li><a href="allproject.html">Партфолио</a></li>
@@ -81,7 +81,7 @@
 
 
 											</div>
-											<a href="#op" class="button">Проконсультироваться</a>
+											<a href="#contact" class="button t-b">Проконсультироваться</a>
 										</div>
 
 									</div>
@@ -185,7 +185,7 @@
 
 
 			</section>
-<section class="s-call inverse" style="background-image: url(img/call.jpeg);"> <!--заявочка -->
+<section class="s-call inverse" id="contact" style="background-image: url(img/call.jpeg);"> <!--заявочка -->
 
 			<div class="container">
 				<div class="row">
