--- a/app/kontekst.html
+++ b/app/kontekst.html
@@ -198,7 +198,7 @@
 							<a href="allproject.html" class="button">Посмотреть решения</a>
 						</div>
 						<div class="col-sm-4">
-							<a href="files/kontekst.pdf" class="button sub-cent">Узнать цены</a></div>
+							<a href="files/kontekst.pdf" target="_blank" class="button sub-cent">Узнать цены</a></div>
 						</div>
 
 
