--- a/app/landing.html
+++ b/app/landing.html
@@ -195,7 +195,7 @@
 							<a href="allproject.html" class="button">Посмотреть решения</a>
 						</div>
 						<div class="col-sm-4">
-							<a href="#" class="button sub-cent">Узнать цены</a></div>
+							<a href="files/landing-page.pdf" target="_blank" class="button sub-cent">Узнать цены</a></div>
 						</div>
 
 				</div>
