--- a/app/seo.html
+++ b/app/seo.html
@@ -124,7 +124,10 @@
 	      				<div class="seo1">
 
 	      					<h1>Уникальные тексты</h1>
-	      					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse ducimus dolores facilis nihil necessitatibus quod! Repellendus est itaque dolorem sunt praesentium, tenetur mollitia fugit culpa, maxime provident nemo, saepe modi!</p>
+	      					<p>Для качественных запросов, необходим уникальный и оптимизированный SEO текст. Наши специалисты
+									готовы вникнуть в вашу тематику и изучить специфику вашего бизнеса, тем самым текст, который будет
+								размещен у вас на сайте будет не только привлекать внимание читающих его, а также будет соответсвовать
+							всем стандартам поисковых систем.</p>
 
 
 	      				</div>
@@ -148,7 +151,8 @@
 	      				<div class="seo4">
 
 	      					<h1>Внутренние настройки сайта</h1>
-	      					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo natus qui enim! Incidunt omnis numquam, consectetur nemo atque ad. Quia suscipit delectus quas ullam exercitationem at alias eius! Accusantium, minus!</p>
+	      					<p>Чтобы поисковые пауки не блуждали в поисках необходимой им информации, мы делаем техническую часть т.е
+									настраиваем файлы (robots.txt, htaccess, sitemap) и делаем полностью понятную структуру сайта.</p>
 
 	      				</div>
 	      			</div>
@@ -156,7 +160,8 @@
 	      				<div class="seo5">
 
 	      					<h1>Отчетность</h1>
-	      					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse ducimus dolores facilis nihil necessitatibus quod! Repellendus est itaque dolorem sunt praesentium, tenetur mollitia fugit culpa, maxime provident nemo, saepe modi!</p>
+	      					<p>Для того, чтобы видели развитиве и рост количества показов и переходов в поисковой системе, мы подготавливаем
+									вам отчеты.</p>
 
 
 	      				</div>
@@ -181,14 +186,15 @@
 						<h2 class="h2 text-center h-first">Посмотрите решения</h2>
 					</div>
 
-					<div class="col-sm-8 col-sm-offset-2">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem delectus nulla, voluptates! Voluptatem repellendus eveniet odio illum necessitatibus quae, beatae culpa, quod nam! Doloremque dolor sunt amet, odio minus assumenda.</p></div>
+					<div class="col-sm-8 col-sm-offset-2 text-center">
+						<p>Вы можете посмотреть примеры наших работ, где возможно увидите,
+							что мы вашу проблему уже решали.</p></div>
 						<div class="col-sm-12">
 							<div class="col-sm-4 col-sm-offset-2">
 							<a href="allproject.html" class="button">Посмотреть решения</a>
 						</div>
 						<div class="col-sm-4">
-							<a href="#" class="button sub-cent">Узнать цены</a></div>
+							<a href="files/seo.pdf" target="_blank" class="button sub-cent">Узнать цены</a></div>
 						</div>
 
 
@@ -214,7 +220,7 @@
 							<input type="hidden" name="form_subject" value="Заявка с сайта Quokka">
 							<!-- END Hidden Required Fields -->
 
-							<div class="callback-logo"><img src="img/logo.svg" alt="Quokka - студия веб разработки"></div>
+							<div class="callback-logo"><img src="img/logo_white.png" alt="Quokka - студия веб разработки"></div>
 							<div class="formhead h2">Оставить заявку</div>
 							<p>Оставьте заявку и мы перезвоним вам в течении 15 минут.</p>
 
