--- a/app/yessite.html
+++ b/app/yessite.html
@@ -80,7 +80,7 @@
 
 
 											</div>
-											<a href="#contact" class="button">Заказать</a>
+											<a href="#contact" class="button p-t">Заказать</a>
 										</div>
 
 									</div>
@@ -120,7 +120,7 @@
 
       </div>
 
-       <div class="yes" id="op"><!-- секция выбора -->
+       <section class="yes" id="op"><!-- секция выбора -->
 
 	      			<div class="col-sm-6">
 	      				<div class="ye1">
@@ -175,7 +175,7 @@
 	      				</div>
 	      			</div>
 
-      </div>
+      </section>
 
       	<section class="s-review inverse section-overlay" style="background-image: url(img/header-bg.jpg);">
 
