--- a/app/sell.html
+++ b/app/sell.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Сайты | Quokka</title>
+	<title>Создания интернет-магазина | Quokka</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -198,7 +198,7 @@
 							<a href="allproject.html" class="button">Посмотреть решения</a>
 						</div>
 						<div class="col-sm-4">
-							<a href="#" class="button sub-cent">Узнать цены</a></div>
+							<a href="files/E-commerce.pdf" target="_blank" class="button sub-cent">Узнать цены</a></div>
 						</div>
 
 
