--- a/app/smm.html
+++ b/app/smm.html
@@ -196,7 +196,7 @@
 							<a href="allproject.html" class="button">Посмотреть решения</a>
 						</div>
 						<div class="col-sm-4">
-							<a href="#" class="button sub-cent">Узнать цены</a></div>
+							<a href="#" target="_blank" class="button sub-cent">Узнать цены</a></div>
 						</div>
 
 
