--- a/app/team.html
+++ b/app/team.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Сайты | Quokka</title>
+	<title>Команда | Quokka</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -50,7 +50,7 @@
 
 							<ul>
 								<li class="active"><a href="index.html">Главная</a></li>
-								<li><a href="marketing.html">Решение для сайтов</a></li>
+								<li><a href="yessite.html">Решение для сайтов</a></li>
 								<li><a href="havesite.html">Сайты</a></li>
 								<li><a href="team.html">Команда</a></li>
 								<li><a href="allproject.html">Партфолио</a></li>
@@ -69,6 +69,7 @@
 									<div class="col-sm-12 col-xs-12">
 										<h1>Наша команда</h1>
 										<div class="header-composition">
+											<div class="owl-carousel team">
 												<div class="col-sm-4">
 													<div class="ch-item ch-img-1">
 														<div class="ch-info">
@@ -93,6 +94,15 @@
 														</div>
 													</div>
 												</div>
+												<div class="col-sm-4">
+													<div class="ch-item ch-img-4">
+														<div class="ch-info">
+															<h3>Калугин Станислав</h3>
+															<p>Маркетолог <!--<a href="howdy/Pavel.html">Перейти в профиль</a>--></p>
+														</div>
+													</div>
+												</div>
+											</div>
 										</div>
 
 									</div>
