--- a/app/alpsity.html
+++ b/app/alpsity.html
@@ -54,10 +54,10 @@
 
 							<ul>
 								<li class="active"><a href="index.html">Главная</a></li>
-								<li><a href="#">Решения для сайтов</a></li>
-								<li><a href="#">Сайты</a></li>
-								<li><a href="about.html">Команда</a></li>
-								<li><a href="#">Портфолио</a></li>
+								<li><a href="yessite.html">Решение для сайтов</a></li>
+								<li><a href="havesite.html">Сайты</a></li>
+								<li><a href="team.html">Команда</a></li>
+								<li><a href="allproject.html">Партфолио</a></li>
 								<!--<li><a href="#">Quokka.news</a></li>-->
 							</ul>
 
@@ -79,24 +79,24 @@
 
 											<div class="project-list">
 												<div class="project-point"><img src="img/project/1.png" alt="1"></div>
-												<p>Главная задача интернет-магазина - это удобство. По этому нами было принято решение минимизировать интерфейс, дав пользователю простоту и удобство работы на сайте.</p>
+												<p>Основной задачей стояло показать посетителям сайта, актуальные работы и цены, косаемых области промшленного альпинизма.</p>
 											</div>
 
 											<div class="project-list">
 												<div class="project-point"><img src="img/project/2.png" alt="2"></div>
-												<p>Вторпостепенной задачей было скорость работы платформы. Интернет-магазин должен полностью грузится не менее 3 сек.</p>
+												<p>На сайте необходимо было разместить блог новостей, в котором должны отображаться актуальные записи, а также последние работы.</p>
 											</div>
 
 											<div class="project-list">
 												<div class="project-point"><img src="img/project/3.png" alt="3"></div>
-												<p>Магазин должен показывать остатки и изменения занесенные в 1с систему, также должны быть синхронизация по фильтрам и свойствам</p>
+												<p>В данном проекте все статьи должны быть разработаны уникальными и оптимизированы под поисковые системы. </p>
 											</div>
 
 											<div class="project-list">
 												<div class="project-point"><img src="img/project/4.png" alt="4"></div>
-												<p>У пользователей как физ.лиц, так и юр.лиц должны быть личные кабинеты, где отображаются разные уровни цен.</p>
+												<p>Дизайн сайта должен быть адаптивным и современным.</p>
 											</div>
-											<a href="http://alpsity.ru/" class="button" target="_blank">Посетить сайт</a>
+											<a href="http://alpsity.ru/" class="button" target="_blank" style="margin-top: 30px;">Посетить сайт</a>
 										</div>
 
 									</div>
@@ -138,9 +138,7 @@
 					</div>
 
 					<div class="col-sm-10 col-sm-offset-1 about-project">
-						<p>Данный проект реализован на фреймворке Django с использованием языка программирования Python,
-							тем самым передача базы 1С происходит частями, создавая минимальную скорость загрузки страниц,
-							 на которых идет загрузка товаров.</p>
+						<p>Из-за поставленных задач было принято решение реализовать данный проект на движке wordpress.</p>
 
 						<p>Для оптимизации верстки были использованы следующие технологии: шаблоны страниц были написаны
 							на html 5 с использованием Sass технологии и сборщик gulp.</p>
